@@ -3,8 +3,14 @@ package ar.com.educacionit.dao.impl;
 import java.lang.reflect.ParameterizedType;
 
 import ar.com.educacionit.dao.GenericDao;
+import ar.com.educacionit.dao.exceptions.DuplicatedException;
+import ar.com.educacionit.dao.exceptions.GenericException;
 import ar.com.educacionit.domain.Entity;
 
+/*
+ * Las T son entidades que representan tablas
+ * Por ende vana heredar de Entity
+ */
 public class JdbcDaoBase<T extends Entity> implements GenericDao<T> {
 	
 	protected String tabla;
@@ -17,7 +23,12 @@ public class JdbcDaoBase<T extends Entity> implements GenericDao<T> {
 		//Resuelve 
 		//Socios, Categorias, Marcas o la clase correspondiente
 	}
-	public T getOne(Long id) {
+	public T getOne(Long id)  throws GenericException{
+		
+		if (id == null) {
+			throw new GenericException("Id no informado ");
+		}
+		
 		String sql = "SELECT * FROM " + this.tabla +"  WHERE ID=" +id;
 		System.out.println(sql);
 		T entity;
@@ -26,13 +37,19 @@ public class JdbcDaoBase<T extends Entity> implements GenericDao<T> {
 		//pasarle a la entity que es generica la instancia de la clase
 		
 		try{
-			entity = this.clazz.newInstance();
+			//entity = this.clazz.newInstance();
+			entity = this.clazz.getDeclaredConstructor().newInstance();
 			entity.setId(id);
 			//Otra manera de hacerlo
 			//entity= this.clazz.getDeclaredConstructor().newInstance();
 			
+			//tomar los metodos de this.clazz > method[]
+			//para cada method > method.invoke(entity)
+			
 			//Clase utilitaria - que va a saber como tomar la instancia y como
 			//armar los seteos de los atributos
+			
+		
 		} catch(Exception e) {
 			entity = null;
 		}
@@ -44,8 +61,8 @@ public class JdbcDaoBase<T extends Entity> implements GenericDao<T> {
 		
 	}
 
-	public T save(T entity) {
-		// TODO Auto-generated method stub
+	public T save(T entity) throws DuplicatedException {
+		
 		return null;
 	}
 
